Blobs integrated into the existing solution
Files corresponding to the repository folder have been moved into it from the classes.

--- a/WhiteBears/Views/Blob/Index.cshtml
+++ b/WhiteBears/Views/Blob/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Whitebears_BlobStorage.Models.BlobViewModel>
+﻿@model IEnumerable<Whitebears.Models.BlobViewModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
