Fix sign out issue

--- a/WhiteBears/Views/Shared/_Layout.cshtml
+++ b/WhiteBears/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav pull-right">
-                    <li class="pull-right">@Html.ActionLink("Sign Out", "Index", "Home")</li>
+                    <li class="pull-right">@Html.ActionLink("Sign Out", "LogOut", "Home")</li>
                     <li class="pull-right">@Html.ActionLink("Settings", "Index", "Home")</li>
                 </ul>
             </div>
